--- a/index.html
+++ b/index.html
@@ -588,10 +588,10 @@
             <td>
               <span>232,6<br />31,3<br />115,0</span>
             </td>
-            <td><span id="startRSH"></span></td>
-            <td><span id="resultRSHP"></span></td>
-            <td><span id="resultRSHQ"></span></td>
-            <td><span id="resultRSHS"></span></td>
+            <td><span class="startRSH"></span></td>
+            <td><span class="resultRSHP"></span></td>
+            <td><span class="resultRSHQ"></span></td>
+            <td><span class="resultRSHS"></span></td>
             <!-- Пустые -->
             <td></td>
             <td></td>
@@ -677,13 +677,13 @@
               <span>ПЧ50/25-300 (при попарно противофазном включении)</span>
             </td>
             <td><span>2шт.</span></td>
-            <td><span>860</span></td>
-            <td><span>1140</span></td>
-            <td><span>1430</span></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td><span id="relayCircutAntiphaseP">860</span></td>
+            <td><span id="relayCircutAntiphaseQ">1140</span></td>
+            <td><span id="relayCircutAntiphaseS">1430</span></td>
+            <td><span class="dualDrive"></span></td>
+            <td><span id="relayCircutAntiphaseTotalP"></span></td>
+            <td><span id="relayCircutAntiphaseTotalQ"></span></td>
+            <td><span id="relayCircutAntiphaseTotalS"></span></td>
             <td></td>
             <td>
               <span>n<sub>пп</sub> = <span id="numberWays"></span></span>
@@ -844,20 +844,6 @@
             <td></td>
             <td></td>
           </tr>
-          <!-- <tr>
-            <td><span>4.2</span></td>
-            <td class="left"><span>Стрелки двойного управления</span></td>
-            <td><span>стр.</span></td>
-            <td><span>8</span></td>
-            <td><span>6</span></td>
-            <td><span>10</span></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr> -->
           <tr>
             <td><br /></td>
             <td></td>
@@ -886,10 +872,10 @@
             <td><span>7,7</span></td>
             <td><span>-</span></td>
             <td><span>7,7</span></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td><span class="numberOfLines"></span></td>
+            <td><span class="relePM"></span></td>
+            <td><span>-</span></td>
+            <td><span class="relePM"></span></td>
             <td></td>
             <td><span>РПЦ систем</span></td>
           </tr>
@@ -900,10 +886,10 @@
             <td><span>150,0</span></td>
             <td><span>-</span></td>
             <td><span>150,0</span></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td><span class="numberKTS-UK"></span></td>
+            <td><span class="KTS-UKPS"></span></td>
+            <td><span>-</span></td>
+            <td><span class="KTS-UKPS"></span></td>
             <td></td>
             <td></td>
           </tr>
@@ -914,10 +900,10 @@
             <td><span>96,0</span></td>
             <td><span>-</span></td>
             <td><span>96,0</span></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td><span>1</span></td>
+            <td><span class="setynPS"></span></td>
+            <td><span>-</span></td>
+            <td><span class="setynPS"></span></td>
             <td></td>
             <td></td>
           </tr>
@@ -948,10 +934,10 @@
             <td><span>72,0</span></td>
             <td><span>-</span></td>
             <td><span>72,0</span></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td><span>1</span></td>
+            <td><span>72,0</span></td>
+            <td><span>-</span></td>
+            <td><span>72,0</span></td>
             <td></td>
             <td></td>
           </tr>
@@ -962,10 +948,10 @@
             <td><span>2,16</span></td>
             <td><span>-</span></td>
             <td><span>2,16</span></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td><span class="numberApproaches"></span></td>
+            <td><span class="fencesTrainPS"></span></td>
+            <td><span>-</span></td>
+            <td><span class="fencesTrainPS"></span></td>
             <td></td>
             <td></td>
           </tr>
@@ -1004,10 +990,10 @@
             <td>
               <span>232,6<br />31,3<br />115,0</span>
             </td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td><span class="startRSH"></span></td>
+            <td><span class="resultRSHP"></span></td>
+            <td><span class="resultRSHQ"></span></td>
+            <td><span class="resultRSHS"></span></td>
             <td></td>
             <td></td>
           </tr>
